validate email, crud users, send email, and design cool

--- a/src/app/main/apps/academy/courses/courses.component.html
+++ b/src/app/main/apps/academy/courses/courses.component.html
@@ -97,9 +97,14 @@
                                 
                                     <button mat-menu-item (click)="deleteUser(user)">
                                         <mat-icon>delete</mat-icon>
-                                        <span>Eliminar</span>
+                                        <span>Borrar</span>
                                     </button>
                                 
+
+                                    <button mat-menu-item (click)="removeUser(user)">
+                                        <mat-icon>delete_forever</mat-icon>
+                                        <span>Eliminar</span>
+                                    </button>
 
                                     <!--
                                         
