analytic event by client user and download excel invitados

--- a/src/@fuse/components/navigation/navigation.component.html
+++ b/src/@fuse/components/navigation/navigation.component.html
@@ -1,6 +1,10 @@
 <div class="nav" [ngClass]="{'horizontal':layout === 'horizontal', 'vertical':layout === 'vertical'}">
 
     <!-- Vertical Navigation Layout -->
+
+    <div *ngIf="_authServices.isStaff || _authServices.isCreator; else isClient">
+
+  
     <ng-container *ngIf="layout === 'vertical'">
 
         <ng-container *ngFor="let item of navigation">
@@ -13,7 +17,25 @@
         </ng-container>
 
     </ng-container>
+
+</div>
     <!-- / Vertical Navigation Layout -->
+
+    <ng-template #isClient>
+          
+    <ng-container *ngIf="layout === 'vertical'">
+
+        <ng-container *ngFor="let item of navigationClient">
+
+            <fuse-nav-vertical-group *ngIf="item.type=='group'" [item]="item"></fuse-nav-vertical-group>
+            <fuse-nav-vertical-collapsable *ngIf="item.type=='collapsable'"
+                                           [item]="item"></fuse-nav-vertical-collapsable>
+            <fuse-nav-vertical-item *ngIf="item.type=='item'" [item]="item"></fuse-nav-vertical-item>
+
+        </ng-container>
+
+    </ng-container>
+    </ng-template>
 
     <!-- Horizontal Navigation Layout -->
     <ng-container *ngIf="layout === 'horizontal'">
