form custom design + functions edition and selection ready

--- a/src/app/main/apps/e-commerce/order/order.component.html
+++ b/src/app/main/apps/e-commerce/order/order.component.html
@@ -44,7 +44,7 @@
 
                     <mat-tab label="Order Details">
 
-                        <div class="order-details tab-content p-24" fusePerfectScrollbar>
+                        <div class="order-details tab-content p-24" [fusePerfectScrollbar]="false" [fusePerfectScrollbarOptions]="{'updateOnRouteChange': true}">
 
                             <div class="section pb-48">
 
