--- a/src/app/main/apps/e-commerce/product/form-custom/form-custom.component.html
+++ b/src/app/main/apps/e-commerce/product/form-custom/form-custom.component.html
@@ -33,7 +33,8 @@
                     <form class="form-margin" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
                         name="productForm" [formGroup]="inputsEnabledForm">
 
-                     
+                        <span class="title-category">Editar y seleccionar</span>
+
                         <div class="list-fields" formArrayName="fieldsEnabled" cdkDropList #todoList="cdkDropList"
                             [cdkDropListData]="formDataFieldsInputs.controls" [cdkDropListConnectedTo]="[doneList]"
                             (cdkDropListDropped)="drop($event)">
@@ -151,8 +152,10 @@
                             
                               
                         <mat-form-field  appearance="outline" fxFlex="75">
-                            <mat-label >{{ f.value.title }}</mat-label>
-                            <input name="name" [type]="f.value.type"  formControlName="value" matInput [required]="f.value.required"  >
+                            <mat-label *ngIf="f.value.required">{{ f.value.title }} *</mat-label>
+
+                            <mat-label *ngIf="!f.value.required">{{ f.value.title }} </mat-label>
+                            <input name="name" [type]="f.value.type"  formControlName="value" matInput  >
                         </mat-form-field>
 
 
