--- a/src/app/main/pages/authentication/lock/lock.component.scss
+++ b/src/app/main/pages/authentication/lock/lock.component.scss
@@ -224,5 +224,71 @@ display: block;
         height: 260px;
     }
 
+    
+
+    .list-fields {
+   
+       
+        display: -webkit-box;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        flex-direction: row;
+        -webkit-box-align: center;
+        align-items: center;
+        box-sizing: border-box;
+        padding: 3px 16px;
+        position: relative;
+        height: inherit;
+        min-height: 100%;
+        /* height: 100%; */
+        background: white;
+        border-radius: 4px;
+        overflow: hidden;
+        display: block;
+    
+        
+        @include media-breakpoint('xs') {
+            padding: 0px 0px;
+          }
+      
+      
+    
+    
+        
+    }
+
+    
+.item-field {
+
+               
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    box-sizing: border-box;
+    padding:   12px  12px 0px 12px;
+    position: relative;
+    height: inherit;
+    width: 100%;
+        min-height: 60px;
+        background: white;
+        border-radius: 4px;
+        overflow: hidden;
+        display: block;
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 2px 2px 0px rgba(0, 0, 0, 0.2),
+                0 4px 5px 1px rgba(0, 0, 0, 0.14),
+                0 3px 8px 1px rgba(0, 0, 0, 0.12);
+
+
+                @include media-breakpoint('xs') {
+                    padding:   12px  12px 0px 12px
+                  }
+              
+              
+
+
+}
 
   }
